--- a/assets/style.css
+++ b/assets/style.css
@@ -30,8 +30,7 @@ html {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
-    position: relative;
+    justify-content: start;
 }
 
 .sidebar h1 {
@@ -44,11 +43,6 @@ html {
     letter-spacing: 0.1rem;
     justify-content: center;
 }
-.input-style {
-    margin-bottom: 10px;
-    text-align: start;
-    width: 100%;
-}
 
 .header {
     display: none;
@@ -58,6 +52,41 @@ html {
     font-family: 'roboto', sans-serif;
     display: flex;
     color: #d3d3d3;
+}
+
+.input-style {
+    width: 100%;
+    height: 100%;
+    padding: 0.5rem;
+    border: 1px solid #2980b9;
+    border-radius: 5px;
+    background-color: var(--primary-color);
+    color: var(--terciary-color);
+}
+
+.PID-box {
+    border: 3px solid #2980b9;
+    padding: 1rem;
+    margin-top: 2rem;
+}
+
+.PID-text {
+    color: #2980b9;
+    font-size: 1rem;
+    font-weight: 700;
+    text-align: start;
+    width: 100%;
+}
+
+.PID-button {
+    background-color: #2980b9;
+    color: var(--terciary-color);
+    border: none;
+    padding: 1rem 1rem;
+    margin-top: 1rem;
+    cursor: pointer;
+    border-radius: 5px;
+    font-weight: 700;
 }
 
 .dash_container {
